fixed spacing and added a bottom border on the homepage banner

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -29,6 +29,7 @@
 .bluflame-banner {
   background-image: url("/assets/images/banner.png");
   height: 5em;
+  border-bottom: 1px solid #cccccc;
 }
 
 .bluflame-banner h1 {
@@ -40,7 +41,7 @@
   background-color: #ffffff;
   border-bottom: 1px solid #cccccc;
   height: 14em;
-  padding: 2em;
+  padding: 0 0 1.66em 0;
   text-align: center;
 }
 
